--- a/fabrica.html
+++ b/fabrica.html
@@ -259,7 +259,7 @@
     
     </main>
     <section class="turmas">
-        <a href="#" id="t-56">
+        <a href="" id="t-56">
             <div class="dados-turma">
                 <div class="card-turmas">
                     <img src="Imagens/Turmas/T.56.jpeg" alt="">
