--- a/servidor.html
+++ b/servidor.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="area-video">
-        <video src="Imagens/Dark Blue Futuristic Particle Sport Competition Background Video.mp4" autoplay loop muted controls></video>
+        <video autoplay loop muted playsinline>
+            <source src="Imagens/Dark Blue Futuristic Particle Sport Competition Background Video.mp4" type="video/mp4">
+        </video>
     </div>
     <div class="area-logos">
         <a href="fabrica.html"><img src="Imagens/Logo Branca Fábrica de Software.png" alt="" id="fabrica"></a>
